fix(DropDownUI.tsx): add gap to dropdown

--- a/src/shared/ui/DropDownUI/DropDown.module.css
+++ b/src/shared/ui/DropDownUI/DropDown.module.css
@@ -3,6 +3,7 @@
   /* display: inline-block; */
   display:flex;
   flex-direction: column;
+  gap: 3px;
   justify-content:space-between;
   font-family: var(--ff-body, 'Roboto', sans-serif);
   letter-spacing: 0.019rem;
